// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render empty table 1`] = `
<table
  className="MuiTable-root"
  role={null}
>
  <caption>
    This is a caption
  </caption>
  <thead
    className="MuiTableHead-root"
    role={null}
  >
    <tr
      className="MuiTableRow-root MuiTableRow-head"
      role={null}
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
        scope="col"
      >
        Some Title
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
        scope="col"
      >
        Another Title
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root"
    role={null}
  />
</table>
`;

exports[`render empty table with no columns 1`] = `null`;

exports[`render filled table 1`] = `
<table
  className="MuiTable-root"
  role={null}
>
  <caption>
    This is a caption
  </caption>
  <thead
    className="MuiTableHead-root"
    role={null}
  >
    <tr
      className="MuiTableRow-root MuiTableRow-head"
      role={null}
    >
      <th
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
        scope="col"
      >
        Some Title
      </th>
      <th
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
        scope="col"
      >
        Another Title
      </th>
    </tr>
  </thead>
  <tbody
    className="MuiTableBody-root"
    role={null}
  >
    <tr
      className="MuiTableRow-root"
      role={null}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
      >
        Some Simple value
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
      >
        <i>
          Some complex value
        </i>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root"
      role={null}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
      >
        <i>
          Another complex value
        </i>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
      >
        Another simple value
      </td>
    </tr>
  </tbody>
</table>
`;
